[gd_scene load_steps=5 format=3 uid="uid://csn0wopgc67fi"]

[ext_resource type="Script" path="res://mob/mob.gd" id="1_3glid"]
[ext_resource type="Texture2D" uid="uid://c7cpcjhl6tnql" path="res://icon.svg" id="2_3psyd"]
[ext_resource type="Texture2D" uid="uid://ci8hkxskjtuv7" path="res://mob/icon_max.svg" id="3_8262e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27tpj"]
size = Vector2(125, 127)

[node name="MOB" type="Area2D"]
script = ExtResource("1_3glid")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-11, -10)

[node name="BlueC" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-62.5, -63.5)
shape = SubResource("RectangleShape2D_27tpj")

[node name="Sprite2D" type="Sprite2D" parent="BlueC"]
position = Vector2(0.5, 0.5)
texture = ExtResource("2_3psyd")

[node name="RedC" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-62.5, -63.5)
shape = SubResource("RectangleShape2D_27tpj")

[node name="Sprite2D" type="Sprite2D" parent="RedC"]
position = Vector2(0.5, 0.5)
texture = ExtResource("3_8262e")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
